@startuml ClassDiagram

namespace EugeneLib {

    namespace System {
        abstract class System
        {
            + {abstract} bool Update(void)
            +const Vector2& GetWindowSize(void)
            + {abstract} Graphics* CreateGraphics(GpuEngine*&) 
            # Vector2 windowSize_
            # std::u8string title_
        }

        class WindowsSystem
        {
            - KeyCodeTable codeTable_
        }

        System <|-- WindowsSystem

        enum PadID
        {
            UP
            DOWN
            LEFT
            RIGHT
            START
            BACK
            LEFT_THUMB
            RIGHT_THUMB
            LEFT_TRIGGER
            RIGHT_TRIGGER
            RESERVE_1
            RESERVE_2
            A
            B
            X
            Y
        }

        class Mouse
        {
            + std::bitset flags_
            + bool CheckFlag(Flags)
            + Vector2 pos
            + float wheel
        }

        class GamePad
        {
            + bool IsHit(PadID)
            + float rightTrigger_
            + float leftTrigger_
            + Vector2 leftThumb_
            + Vector2 rightThumb_
            + bitset<16> buttons_            
        }

        abstract class DynamicLibrary
        {
            + func* GetFunction(const string& functionName)
            # void* FindFunction(const string& functionName) const
        }

        class Dll
        {
            - HWND handle_
        }
        Dll --|> DynamicLibrary
    }

    namespace Graphics {
        abstract class Graphics
        {
            + {abstract} GpuEngine* CreateGpuEngine(size_t )
            + {abstract} CommandList* CreateCommandList(void) 
            + {abstract} GraphicsPipeline* CreateGraphicsPipeline(ShaderInputSpan ,ShaderTypePaisrSpan ,RenderTargetSpan ,TopologyType ,bool ,ShaderLayoutSpan ,SamplerSpan
            )
            + {abstract} GpuResource* CreateUploadableResource(size_t )
            + {abstract} GpuResource* CreateUploadableTextureResource(Texture&)
            + {abstract} GpuResource* CreateDefaultResource(size_t )
            + {abstract} GpuResource* CreateTextureResource(const TextureInfo& )
            + {abstract} GpuResource* CreateRenderTargetResource(const Vector2& , Format, const std::span<float, 4>&)   
            + {abstract} GpuResource* CreateDepthResource(const Vector2& , Format, float) 
            + {abstract} ShaderResourceViews* CreateShaderResourceViews(size_t )
            + {abstract} RenderTargetViews* CreateRenderTargetViews(size_t , bool )
            + {abstract} DepthStencilViews* CreateDepthStencilViews(size_t )
            + {abstract} VertexView* CreateVertexView(size_t, size_t, GpuResource&)
            + {abstract} GpuResource& GetBackBufferResource(void)
            + {abstract} RenderTargetViews& GetViews(void) 
            + {abstract} size_t GetNowBackBufferIndex(void) 
            + {abstract} void Present(void) 
            # {abstract} GpuResource* CreateSwapChainResource(std::uint32_t)

        }

        Graphics <|-- Dx12Graphics

        abstract class CommandList
        {

        }

        CommandList <|-- Dx12CommandList

        abstract class GpuEngine
        {

        }

        GpuEngine <|-- Dx12GpuEngine

        abstract class ImageResource
        {
            
        }

        abstract class BufferResource
        {
            
        }

        abstract class GpuResource
        {

        }

        abstract class ResourceBindLayout
        {

        }

        abstract class GraphicsPipeline
        {
            
        }

        GraphicsPipeline <|-- Dx12GraphicsPipeline

        abstract class VertexView
        {

        }

        VertexView <|-- Dx12VertexView

        abstract class ShaderResourceViews
        {

        }

        Dx12Views <|-- Dx12ShaderResourceViews
        ShaderResourceViews <|-- Dx12ShaderResourceViews

        abstract class RenderTargetViews
        {

        }

        Dx12Views <|-- Dx12RenderTargetViews
        RenderTargetViews <|-- Dx12RenderTargetViews

        abstract class DepthStencilViews
        {
            
        }

        Dx12Views <|-- Dx12DepthStencilViews
        DepthStencilViews <|-- Dx12DepthStencilViews
    }

        namespace Sound {
        abstract class Sound
        {
            +SoundSpeaker* CreateSoundSpeaker(const SoundFile&, const float) const
            +SoundStreamSpeaker* CreateSoundStreamSpeaker(const filesystem&, const float) const 
            +SoundControl* CreateSoundControl(std::uint32_t,std::uint32_t, std::uint16_t, std::uint16_t) const
            +Sound3DControl* CreateSound3DControl(std::uint32_t, std::uint32_t, std::uint16_t, std::uint16_t) const
            #std::uint32_t channelMask_;
		    #std::uint32_t sampleRate_;
        }
        


        abstract class SoundBase
        {
            +void SetVolume(float)
            +void SetPan(std::span<float> )
            +float GetVolume(void) const
            +std::uint16_t GetOutChannel(void) const
            +std::uint16_t GetInChannel(void) const
            +void SetOutput(SoundControl&) 
            # float volume_
            # std::uint16_t outChannel_
            # std::uint16_t inChannel_;
        }

        abstract class SoundSpeaker
        {
            +  void Play(int)
            + void Stop(void)
            +  bool IsEnd(void) const
            + void SetPitchRate(float)
            + void SetData(const std::uint8_t*, const std::uint64_t)  
            # const float maxPitchRate_
        }

        SoundBase <|-- SoundSpeaker

        abstract class SoundStreamSpeaker
        {
            #  std::ifstream file_
        }

        SoundBase <|-- SoundStreamSpeaker

        abstract class Sound3DController
        {
            + void Set3DSound(const Vector3& , const Vector3& , const Vector3& , const Vector3& ,const Vector3& , const Vector3& , const Vector3& , const Vector3&) 
        }

        abstract class SoundController
        {
            #  void* Get(void) 
        }

        SoundBase <|-- SoundController
        SoundController <|-- Sound3DController
        
        Sound <|-- Xa2Sound
        SoundSpeaker <|-- Xa2SoundSpeaker
        SoundStreamSpeaker <|-- Xa2SoundStreamSpeaker
        SoundController <|-- Xa2SoundController
    }
}
@enduml